# HealthManagement

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
backend/app/: database.py  main.py
backend/app/models/: __init__.py  task_results.py
backend/app/routers/: tasks.py
backend/app/schemas/: __init__.py  task_schemas.py
backend/app/services/: notion_service.py
frontend/: .env.example  .env.production  .gitignore  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/pages/: AllTasksFlow.css  AllTasksFlow.tsx  Dashboard.css  Dashboard.tsx  EFSITask.css  EFSITask.tsx  FlankerTask.css  FlankerTask.tsx  PVTTask.css  PVTTask.tsx  VASTask.css  VASTask.tsx
frontend/src/services/: api.ts
frontend/src/types/: tasks.ts
